--- a/Studies/Drug Policies/bfa-aldp.yml
+++ b/Studies/Drug Policies/bfa-aldp.yml
@@ -3,8 +3,7 @@
 # Boni Lab
 #
 # BURKINA FASO model configuration for drug policy alterations
-# in which the private market is eliminated in favor of the 
-# recommended therapy plus severe treatments.
+# in which an MFT is implemented for the public market.
 #
 # PfPR data for calibration comes from the Malaria Atlas Project
 # projections for 2017.
@@ -159,9 +158,8 @@ immune_system_information:
   # (per year) age-dependent faster acquisition of immunity from age 1 to age 10
   immune_inflation_rate: 0.01
 
-  # mix and max probabilities of experiencing symptoms as a result of a new infection
+  # Max probability of experiencing symptoms as a result of a new infection
   # the actual probability will depend on the host's immunity
-  min_clinical_probability: 0.005
   max_clinical_probability: 0.99
 
   # slope of sigmoidal prob-v-immunity function (parameter z in supplement of 2015 LGH paper) 
